kubernetes/talos/deploy/splitpro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitpro
spec:
  selector:
    matchLabels:
      app: splitpro
      release: splitpro
  template:
    metadata:
      labels:
        app: splitpro
        release: splitpro
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: splitpro
          image: ossapps/splitpro:latest
          imagePullPolicy: Always
          
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          ports:
            - name: splitpro
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: data
              mountPath: /app/uploads

          readinessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3000
              path: /
          livenessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3000
              path: /

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: splitpro-data
