kubernetes/talos/deploy/splitpro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitpro
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: splitpro
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: splitpro
    release: splitpro
  type: ClusterIP
